[gd_scene load_steps=7 format=3 uid="uid://dtpkylmn14mi6"]

[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="1_i4qau"]
[ext_resource type="Script" path="res://UI/Elements/MenuButton/MenuButton.gd" id="2_uthlb"]

[sub_resource type="FontVariation" id="FontVariation_kj5ma"]
base_font = ExtResource("1_i4qau")
spacing_glyph = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sv2u8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tl0wd"]

[sub_resource type="FontVariation" id="FontVariation_qbkrn"]
base_font = ExtResource("1_i4qau")
spacing_glyph = -17

[node name="MenuButton" type="Button"]
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.498039, 0.631373, 0.870588, 0.384314)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_kj5ma")
theme_override_font_sizes/font_size = 45
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sv2u8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tl0wd")
text = "BUTTON"
flat = true
script = ExtResource("2_uthlb")

[node name="ArrowContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 220

[node name="LeftArrow" type="Label" parent="ArrowContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.498039, 0.631373, 0.870588, 0.384314)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_qbkrn")
theme_override_font_sizes/font_size = 45
text = "===>"

[node name="RightArrow" type="Label" parent="ArrowContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.498039, 0.631373, 0.870588, 0.384314)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_qbkrn")
theme_override_font_sizes/font_size = 45
text = "<==="

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
